# serializer version: 1
# name: test_BSRGAN
  SRModelDescriptor(
    architecture='ESRGAN',
    input_channels=3,
    output_channels=3,
    scale=4,
    size=SizeRequirements(minimum=None, multiple_of=None, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
      '64nf',
      '23nb',
    ]),
  )
# ---
# name: test_ESRGAN_community
  SRModelDescriptor(
    architecture='ESRGAN',
    input_channels=3,
    output_channels=3,
    scale=1,
    size=SizeRequirements(minimum=None, multiple_of=None, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
      '64nf',
      '23nb',
    ]),
  )
# ---
